fix misalignment of buttons

--- a/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
@@ -84,8 +84,10 @@
   margin-top: 30px;
 }
 
-.actions-cell button:not(.dropdown-item) {
-  margin-left: var(--btn-margin);
+@media (min-width: 768px) { //applies only to non-mobile screens
+  .actions-cell button:not(.dropdown-item) {
+    margin-left: var(--btn-margin);
+  }
 }
 
 .dropdown-menu {
